--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.1.2
   cached_network_image: ^3.4.1
   timeago: ^3.7.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
