--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cached_network_image: ^3.4.1
   timeago: ^3.7.0
   http: ^1.3.0
+  flutter_bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
