--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   timeago: ^3.7.0
   http: ^1.3.0
   flutter_bloc: ^9.1.0
+  url_launcher: ^6.3.1
+  loading_animation_widget: ^1.3.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
