--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   url_launcher: ^6.3.1
   loading_animation_widget: ^1.3.0
   shimmer: ^3.0.0
+  injectable:
+  get_it:
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +61,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-
+  injectable_generator:
+  build_runner:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
